# IFJ15

./: CMakeLists.txt  Makefile  README.md  built_functions.c  built_functions.h  datatypes.h  debug.h  dox  dynamic_buffer.c  dynamic_buffer.h  dynamic_structure_buffer.c  dynamic_structure_buffer.h  error_macros.h  ial.c  ial.h  includes.sh  init.sh  instruction_generator.c  instruction_generator.h  instructions.c  instructions.h  interpreter.c  interpreter.h  main.c  main.h  precedence_analysis.c  precedence_analysis.h  resources.h  rozdeleni  rozsireni  scanner.c  scanner.h  semantics.c  semantics.h  stack.c  stack.h  symbol_table.c  symbol_table.h  syntax_analysis.c  syntax_analysis.h  (+2 more)
tests/: CMakeLists.txt  check_expr_test.c  db_test.c  dynbuff_test.c  dynstruct_test.c  instructions_test.c  pa_test.c  run_check_expr_tests  run_scanner_test.sh  scanner_test.c  stack_test.c  symbol_table_test.c  syntax_check_test.sh
tests/test_data/: double_test  empty  fill_output.sh  operator_test  output_double_test  output_empty  output_identificator_test  output_operator_test  output_single_token_test  output_source1  output_x  simgle_token_test  single_token_test  source1  x
tests/test_data/check_expr_test_data/: .expr1.swp  expr1  expr2  expr4  expr5  expr6
tests/test_data/general_tests/: run_all_tests  test.sh  test2_block_comment1  test2_def_decl_differs3  test2_double_number1  test2_empty_func8  test2_incompatible_type4  test2_main_decl3  test2_multi_decl3  test2_neg_number2  test2_substr_out_of_range10  test2_var_redefinition3  test2_var_used_before_defined3  test3_def_decl_differs3  test3_incompatible_type4  test3_main_decl3  test4_incompatible_type4  test5_incompatible_type4  test6_incompatible_type4  test_014_R2  test_ascii_null1  test_auto_as_return2  test_auto_in_decl6  test_block_comment1  test_brackets_count2  test_builtin_redef3  test_check_ret_type4  test_cin_error2  test_cmp_str_int4  test_cmp_uninit8  test_comma_in_decl2  test_comma_in_func_call4  test_compare_str_int4  test_concat2_uninit8  test_concat_uninit8  test_const_as_lvalue3  test_cout2  test_cout_uninit8  test_decimal_numbers_error1  test_decimal_numbers_ret_ok2  (+81 more)
tests/test_data/general_tests/tests_ok/: test2_exp_number_ok0  test_001_R0  test_002_R0  test_003_R0  test_004_R0  test_005_R0  test_033_6_R0  test_036_4_R0  test_036_6_R0  (+86 more)
tests/test_data/scanner_test_data/: double_test  fill_output.sh  identificator_test  output_double_test  output_empty  output_identificator_test  output_operator_test  output_single_token_test  output_source1  output_x  source1
tests/test_data/syntax_check_data/: test  test10  test11  test12  test13  test14  test15  test16  test17  test18  test2  test3  test4  test5  test6  test7  test8
(+124 files in other folders)
